--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
-  "name": "magic-patterns-vite-template",
+  "name": "cross-border-blog",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "npx vite",
     "build": "npx vite build",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .",
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "clsx": "latest",
+    "highlight.js": "11.11.1",
+    "lucide-react": "^0.441.0",
+    "mermaid": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.26.2",
-    "lucide-react": "0.522.0"
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "latest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/node": "^20.11.18",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.50.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.2.0",
-    "tailwindcss": "3.4.17",
     "autoprefixer": "latest",
-    "postcss": "latest"
+    "eslint": "^9.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "globals": "^15.0.0",
+    "postcss": "latest",
+    "tailwindcss": "3.4.17",
+    "typescript": "~5.5.0",
+    "vite": "^5.2.0"
   }
 }
